--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,13 @@ dependencies = [
     "lxml-html-clean>=0.4.2",
     "openpyxl>=3.1.5",
     "pandas>=2.3.1",
+    "passlib[bcrypt]>=1.7.4",
     "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "requests-html>=0.10.0",
     "selenium>=4.34.2",
     "selenium-stealth>=1.0.6",
+    "slowapi>=0.1.9",
     "uvicorn>=0.35.0",
 ]
