--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,4 +53,11 @@ jobs:
             git pull origin develop
             docker compose -f compose.yaml down --remove-orphans
             docker compose -f compose.yaml up --build -d
-            docker rmi $(docker images -f "dangling=true" -q)
+
+            # check if there are any dangling images and remove them
+            if [ "$(docker images -f "dangling=true" -q)" ]; then
+              echo "Removing dangling images..."
+              docker rmi $(docker images -f "dangling=true" -q)
+            else
+              echo "No dangling images to remove."
+            fi
