--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+ENVIRONTMENT=local
+
 # Security Settings
 API_TOKEN="your-secure-token-here"  # Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
 ALLOWED_HOSTS=localhost,127.0.0.1,your-domain.com
