--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
             # Create .env file with environment variables from GitHub Secrets
             cat <<EOF > /home/nino/scraper-dashboard/.env
             # Security Settings
+            ENVIRONMENT=production
+
             API_TOKEN="${{ secrets.API_TOKEN }}"
             ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}
             CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}
@@ -51,8 +53,8 @@ jobs:
 
             cd /home/nino/scraper-dashboard
             git pull origin develop
-            docker compose -f compose.yaml down --remove-orphans
-            docker compose -f compose.yaml up --build -d
+            docker compose -f compose.prod.yaml down --remove-orphans
+            docker compose -f compose.prod.yaml up --build -d
 
             # check if there are any dangling images and remove them
             if [ "$(docker images -f "dangling=true" -q)" ]; then
