--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -32,6 +32,9 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_NODE_MAX_SESSIONS=10
       - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+    networks:
+      - sd-network
+
 
   selenium-hub:
     image: selenium/hub:4.34.0-20250727
@@ -40,6 +43,8 @@ services:
       - "4442:4442"
       - "4443:4443"
       - "4444:4444"
+    networks:
+      - sd-network
 
 
 # The commented out section below is an example of how to define a PostgreSQL
