fix: app volume

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -22,7 +22,7 @@ services:
     networks:
       - sd-network
     volumes:
-      - ${HOME}/.scraper_dash:/home/appuser/.scraper_dash
+      - ${HOME}/.scraper_dash:/appuser/.scraper_dash
 
   chrome:
     image: selenium/node-chrome:4.34.0-20250727
