--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -8,7 +8,7 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  server:
+  server: &server
     build:
       context: .
       dockerfile: ./docker/production/Dockerfile
